# chinook

./: .gitignore  .replit  app.py  config.py  models.py  pyproject.toml
static/css/: style.css
templates/: base.html  employee.html  genres.html  index.html  invoice.html  track.html
